[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/pirate_ship.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Hazards/PirateBoat.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Components/ParticleSpawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/SFX/ahoy.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.99991
height = 44.0

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="Animation" id=8]
resource_name = "loating"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -5.0, 5.0, -5.0 ]
}

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="PirateBoat" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "loating"
anims/loating = SubResource( 8 )

[node name="YSort" type="YSort" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="YSort"]
rotation = -0.0227157
frames = SubResource( 7 )
frame = 1
playing = true
offset = Vector2( 0, -24 )

[node name="CPUParticles2D" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 0, 8 )
amount = 100
emission_rect_extents = Vector2( 30, 5 )
scale_amount = 1.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
pitch_scale = 1.5

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
